--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -30,6 +30,10 @@ fieldset {
 	margin: 0 0 20px 0;
 }
 
+.inputbox, select {
+	min-height: 40px;
+}
+
 select {
 	min-height: 40px;
 	option {
@@ -91,36 +95,40 @@ input[type='search']::-webkit-search-cancel-button {
 /* Search Box
 ============================================== */
 
-.search-box form fieldset {
-	position: relative;
-	padding: 0 80px 0 0;
-	background: $color-01;
-	border-radius: 3px;
-	input[type='search'] {
-		margin: 0;
-	}
-	.button {
-		width: 40px;
-		@include position($type: absolute, $top: 0, $z: 1);
-		padding: 10px 0;
+.search-box {
+	&, form fieldset {
 		background: $color-01;
-		.icon {
-			color: $color-12;
-			@include transition(color 0.3s ease-in-out);
-		}
-		.fa-cog {
-			font-size: rem(16px);
-			@include position($type: relative, $top: 1px);
-		}
-		&:hover .icon {
-			color: $color-13;
-		}
+		border-radius: 3px;
 	}
-	button {
-		right: 40px;
-	}
-	a.button {
-		right: 0;
+	form fieldset {
+		position: relative;
+		padding: 0 80px 0 0;
+		input[type='search'] {
+			margin: 0;
+		}
+		.button {
+			width: 40px;
+			@include position($type: absolute, $top: 0, $z: 1);
+			padding: 10px 0;
+			background: $color-01;
+			.icon {
+				color: $color-12;
+				@include transition(color 0.3s ease-in-out);
+			}
+			.fa-cog {
+				font-size: rem(16px);
+				@include position($type: relative, $top: 1px);
+			}
+			&:hover .icon {
+				color: $color-13;
+			}
+		}
+		button {
+			right: 40px;
+		}
+		a.button {
+			right: 0;
+		}
 	}
 }
 
