--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -713,7 +713,7 @@
 	.topiclist > li.header dl:after {
 		display: block;
 		content: 'Mark';
-		flex: 0 0 90px;
+		width: 90px;
 		padding: 0 10px;
 		box-sizing: border-box;
 	}
