--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -95,40 +95,35 @@ input[type='search']::-webkit-search-cancel-button {
 /* Search Box
 ============================================== */
 
-.search-box {
-	&, form fieldset {
-		background: $color-01;
-		border-radius: 3px;
+.search-box form fieldset {
+	position: relative;
+	padding: 0 75px 0 0;
+	background: $color-01;
+	border-radius: 3px;
+	input[type='search'] {
+		margin: 0;
 	}
-	form fieldset {
-		position: relative;
-		padding: 0 80px 0 0;
-		input[type='search'] {
-			margin: 0;
+	.button {
+		background: transparent;
+		@include sizing(20px, 20px);
+		font-size: rem(16px);
+		line-height: 1;
+		@include position($type: absolute, $top: 0, $bottom: 0, $right: 10px, $z: 1);
+		margin: auto;
+		padding: 2px;
+		.icon {
+			width: auto;
+			font-size: inherit;
+			line-height: 0;
+			color: $color-12;
+			@include transition(color 0.3s ease-in-out);
 		}
-		.button {
-			width: 40px;
-			@include position($type: absolute, $top: 0, $z: 1);
-			padding: 10px 0;
-			background: $color-01;
-			.icon {
-				color: $color-12;
-				@include transition(color 0.3s ease-in-out);
-			}
-			.fa-cog {
-				font-size: rem(16px);
-				@include position($type: relative, $top: 1px);
-			}
-			&:hover .icon {
-				color: $color-13;
-			}
+		&:hover .icon {
+			color: $color-13;
 		}
-		button {
-			right: 40px;
-		}
-		a.button {
-			right: 0;
-		}
+	}
+	button.button {
+		right: 45px;
 	}
 }
 
