--- a/khyeras/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/styles/khyeras_v1/template/overall_footer.html
@@ -10,9 +10,9 @@
 					<div class="flex-row flex-row-20">
 						<div class="flex-column has-discord">
 							<p class="discord-intro"><i class="icon misc-icon misc-discord" aria-hidden="true"></i>Don't like chat widgets or perhaps you're on a mobile device? <a href="//discord.gg/MXtzbmw">Join us on our Discord server</a>. Guests are welcome to chat in select channels.</p>
-							<div id="discord-frame">
+							<!-- <div id="discord-frame">
 								<iframe src="//titanembeds.com/embed/482924002411806732?css=330" frameborder="0"></iframe>
-							</div>
+							</div> -->
 						</div>
 						<div class="flex-column">
 							<!-- INCLUDE custom/footer_links.html -->
