--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -227,6 +227,9 @@ fieldset:not(.polls) {
 						margin: 0 $ffs;
 					}
 				}
+				.has-radio-button {
+					padding: 0 5px 0 0;
+				}
 			}
 			&#tz_select_date {
 				display: flex !important;
