Changes for mobile

--- a/khyeras/_dev/styles/khyeras_v1/template/simple_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/simple_footer.html
@@ -1,3 +1,6 @@
+	<!-- IF SCRIPT_NAME == 'memberlist' -->
+		<a href="#" onclick="window.close(); return false;">{L_CLOSE_WINDOW}</a>
+	<!-- ENDIF -->
 </div>
 
 <div class="copyright" role="contentinfo">{CREDIT_LINE}
