--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -39,6 +39,7 @@ $color-19: #ad7337; // orange
 $color-20: #ae973f; // yellow
 $color-21: #4d2e56; // purple
 $color-22: #666666; // gray
+$color-23: #67e5e2; // bright blue
 
 // Fonts
 // ============================================== //
