Changes for mobile devices

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -662,6 +662,14 @@
 	}
 }
 
+/* UCP - Manage linked accounts
+============================================== */
+
+.section-ucp-account-management .cp-main table.table1 td label {
+	display: inline-block;
+	margin: 0;
+}
+
 /* MCP - Layout
 ============================================== */
 
